--- a/Project/Objects/BH-F103.build_log.htm
+++ b/Project/Objects/BH-F103.build_log.htm
@@ -21,7 +21,7 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.14.0_KEIL
 Dialog DLL:      TCM.DLL V1.14.4.0
  
 <h2>Project:</h2>
-D:\个人\工程训练大赛\省赛\电路控制\vet6\Project\BH-F103.uvprojx
+D:\个人\工程训练大赛\省赛\电路控制\调试V1.0\Project\BH-F103.uvprojx
 Project File Date:  09/19/2018
 
 <h2>Output:</h2>
@@ -53,17 +53,14 @@ compiling stm32f10x_tim.c...
 compiling stm32f10x_usart.c...
 compiling stm32f10x_wwdg.c...
 compiling main.c...
-..\User\main.c(3): warning:  #1295-D: Deprecated declaration TIM3Init - give arg types
-  void TIM3Init();
-..\User\main.c: 1 warning, 0 errors
 compiling stm32f10x_it.c...
 linking...
-Program Size: Code=2248 RO-data=320 RW-data=0 ZI-data=1024  
+Program Size: Code=1792 RO-data=320 RW-data=0 ZI-data=1024  
 FromELF: creating hex file...
-".\Objects\BH-F103.axf" - 0 Error(s), 1 Warning(s).
+".\Objects\BH-F103.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
-  D:\个人\工程训练大赛\省赛\电路控制\vet6\Project\RTE
+  D:\个人\工程训练大赛\省赛\电路控制\调试V1.0\Project\RTE
   G:\MDK\ARM\PACK\Keil\STM32F1xx_DFP\2.2.0
 
 <h2>Collection of Component Files used:</h2>
