--- a/Project/Objects/BH-F103.build_log.htm
+++ b/Project/Objects/BH-F103.build_log.htm
@@ -53,12 +53,37 @@ compiling stm32f10x_tim.c...
 compiling stm32f10x_usart.c...
 compiling stm32f10x_wwdg.c...
 compiling main.c...
+..\User\main.c(573): warning:  #177-D: variable "codeM" was declared but never referenced
+        u8 codeM = x/10%10;
+..\User\main.c(574): warning:  #177-D: variable "codeL" was declared but never referenced
+        u8 codeL = x%10;
+..\User\main.c(611): warning:  #177-D: variable "codeH" was declared but never referenced
+        u8 codeH = x/100;
+..\User\main.c(613): warning:  #177-D: variable "codeL" was declared but never referenced
+        u8 codeL = x%10;
+..\User\main.c(650): warning:  #177-D: variable "codeH" was declared but never referenced
+        u8 codeH = x/100;
+..\User\main.c(651): warning:  #177-D: variable "codeM" was declared but never referenced
+        u8 codeM = x/10%10;
+..\User\main.c(690): warning:  #177-D: variable "codeM" was declared but never referenced
+        u8 codeM = x/10%10;
+..\User\main.c(691): warning:  #177-D: variable "codeL" was declared but never referenced
+        u8 codeL = x%10;
+..\User\main.c(730): warning:  #177-D: variable "codeH" was declared but never referenced
+        u8 codeH = x/100;
+..\User\main.c(732): warning:  #177-D: variable "codeL" was declared but never referenced
+        u8 codeL = x%10;
+..\User\main.c(772): warning:  #177-D: variable "codeH" was declared but never referenced
+        u8 codeH = x/100;
+..\User\main.c(773): warning:  #177-D: variable "codeM" was declared but never referenced
+        u8 codeM = x/10%10;
+..\User\main.c: 12 warnings, 0 errors
 compiling stm32f10x_it.c...
 compiling bsp_usart.c...
 linking...
-Program Size: Code=8436 RO-data=768 RW-data=28 ZI-data=5124  
+Program Size: Code=10436 RO-data=768 RW-data=28 ZI-data=5124  
 FromELF: creating hex file...
-".\Objects\BH-F103.axf" - 0 Error(s), 0 Warning(s).
+".\Objects\BH-F103.axf" - 0 Error(s), 12 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
   D:\个人\工程训练大赛\省赛\电路控制\调试V1.0\Project\RTE
